# projectBot

./: .gitignore  .gitmodules  CMakeLists.txt
src/: context.cpp  context.h  indexer.cpp  indexer.h  main.cpp  scanner.cpp  scanner.h  utils.cpp  utils.h  wiki_generator.cpp  wiki_generator.h
